--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      pygments
 permalink:        pretty
 
 # Setup
-title:            Harsh Agrawal
+title:            Harsh
 tagline:          'Who has watched the friends?'
 description:      'A cool Boy! <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              http://hyde.getpoole.com
