--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 # Setup
 title:            'Harsh Agrawal'
 tagline:          "Beware! I'm looking over ya"
-description:      'A cool Boy! <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+description:      'I am a 15 year old cool boy who loved reading dark & vicious <a href="http://thekidreader.wordpress.com" target="_blank">Books</a> and program <a href="https://github.com/Xavian-Brooker" target="_blank">AI</a> that can generate new pokemons.'
+url:              https://drive.google.com/file/d/1wWDjR6NPzeImvfp81sBo_XFA9YDuio5n/view
 baseurl:          /
 
 author:
