--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ permalink:        pretty
 
 # Setup
 title:            'Harsh Agrawal'
-tagline:          "Beware! I'm looking over ya"
-description:      'I am a 15 year old cool boy who loved reading dark & vicious <a href="http://thekidreader.wordpress.com" target="_blank">Books</a> and program <a href="https://github.com/Xavian-Brooker" target="_blank">AI</a> that can generate new pokemons.'
+tagline:          "Can you look for Mr. Parkinson?"
+description:      'I am a 15 year old boy who loves reading vicious <a href="http://thekidreader.wordpress.com" target="_blank">Books</a> and program <a href="https://github.com/Xavian-Brooker" target="_blank">AI's</a> that can generate pokemons!'
 url:              https://drive.google.com/file/d/1wWDjR6NPzeImvfp81sBo_XFA9YDuio5n/view
 baseurl:          /
 
