--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 # Setup
 title:            'Harsh Agrawal'
 tagline:          "Can you look for Mr. Parkinson?"
-description:      'I am a 15 year old boy who loves reading vicious <a href="http://thekidreader.wordpress.com" target="_blank">Books</a> and program <a href="https://github.com/Xavian-Brooker" target="_blank">AI's</a> that can generate pokemons!'
+description:      'I am a 15 year old boy who loves reading vicious <a href="http://thekidreader.wordpress.com" target="_blank">Books</a> and program <a href="https://github.com/Xavian-Brooker" target="_blank">AIs</a> that can generate pokemons!'
 url:              https://drive.google.com/file/d/1wWDjR6NPzeImvfp81sBo_XFA9YDuio5n/view
 baseurl:          /
 
