--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Harsh Agrawal
+bio: If history repeats itself, I'm surely getting a dinosour!
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: A blog about me and my projects
 
 # if it's an external image, update below for true
 # better with square images
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://koppl.in/indigo
+url: https://github.com/Xavian-Brooker
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -51,7 +51,7 @@ github: mygithub
 medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: sunfall@gmail.com
 
 authors:
     johndoe:
