--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: A blog about me and my projects
 
 # if it's an external image, update below for true
 # better with square images
-external-image: false
-picture: assets/circle_profile.jpg
+external-image: true
+picture: assets/circle_profile.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
