--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Harsh Agrawal
-bio: If history repeats itself, I'm surely getting a dinosaur!
+bio: If history repeats itself, I'm surely getting a pet dinosaur!
 
 # twitter summary info
 description: A blog about me and my projects
