--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,10 @@ analytics-google: 'UA-148595034-1'
 # analytics-piwik-id: 1
 
 # if you don't want comments in your posts, leave categories empty
-disqus:
-  shortname: mydisqus # enter this from your disqus account
-  categories:  # only show disqus for posts that have these categories
+
+# disqus:
+  # shortname: # enter this from your disqus account
+  # categories:  # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 facebook: harsh.agrawal.522
